# BasisREMY

./: .gitattributes  .gitignore  .gitmodules  README.md  dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
adapters/backends/: fida_run.m  mrscloud_run_metab.m  sLASER_makebasisset_function.m
adapters/utils/: contains.m
backends/: base.py  custom_backends.py  fida_backends.py  fslmrs_backend.py  lcmodel_backend.py  mrscloud_backend.py  slaser_backend.py
basisremy/: __init__.py  __main__.py
basisremy/adapters/backends/: fida_run.m  io_loadRFwaveform.m  sLASER_makebasisset_function.m  sim_lcmrawbasis.m
basisremy/adapters/utils/: io_writelcmBASIS_new.m
basisremy/assets/: OCTAVE_SETUP.md
basisremy/assets/imgs/basisremy_mouse_all_colors/: README.txt  color_manifest.csv
basisremy/backends/: base.py  custom_backends.py  fida_backends.py  fslmrs_backend.py  mrscloud_backend.py
basisremy/core/: basisremy.py  exporters.py  externals.py  octave_manager.py  parameter_registry.py  paths.py
basisremy/docker/: __init__.py  docker_octave.py  dockerfile  requirements.txt
basisremy/gui/: application.py  export_dialog.py  help_widget.py  local_file_picker.py
basisremy/remy/: MRSinMRS.py  __init__.py
core/: basisremy.py  exporters.py  octave_manager.py  parameter_registry.py
docker_setup/: docker_octave.py  dockerfile
docker_setup/octave_shared/: result.mat  run.m
example_data/BigGABA_P1P_S01/: S01_PRESS_35_act.SDAT  S01_PRESS_35_act.SPAR  S01_PRESS_35_ref.SDAT  S01_PRESS_35_ref.SPAR
examples/: basic_usage.py
gui/: application.py  export_dialog.py  help_widget.py
legacy/: test_backend.py  test_lcmodel_backend.py  test_sLaser_backend.py
own/: sLASER_makebasisset_function.m
tests/: conftest.py  test_backend.py  test_lcmodel_backend.py  test_packaging_smoke.py  test_remy.py  test_sLaser_backend.py
tests/backends/custom/: test_slaser.py
tests/backends/fida/: test_fida_schema.py  test_laser.py  test_press.py  test_steam.py
tests/backends/fslmrs/: test_fslmrs.py
tests/backends/lcmodel/: test_laser.py  test_press.py  test_steam.py
tests/backends/mrscloud/: test_mrscloud.py  test_mrscloud_schema.py
tests/backends/slaser/: test_slaser.py
tests/core/: test_basisremy.py  test_exporters.py  test_octave_manager.py  test_taxonomy.py
tests/remy/bruker/: test_method.py
tests/remy/ge/: test_pfile.py
tests/remy/nifti/: test_nifti.py
tests/remy/philips/: test_spar.py
tests/remy/siemens/: test_dat.py  test_ima.py  test_rda.py
tests/utils/: file_discovery.py
