[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "basisremy"
version = "0.1.1"
description = "A tool for generating study-specific MR spectroscopy basis sets directly from raw MRS data."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "J. P. Merkofer", email = "j.p.merkofer@tue.nl" },
]
keywords = ["MRS", "spectroscopy", "basis set", "simulation", "FID-A", "FSL-MRS", "MRSCloud"]

# NOTE: Tkinter is intentionally NOT listed here. It ships with the CPython
# standard library and cannot be installed from PyPI. See the README
# "Troubleshooting" section for platform-specific Tk install notes.
dependencies = [
    "brukerapi==0.1.8",
    "docker>=6.0.0",
    "matplotlib==3.10.7",
    "numpy==2.3.3",
    "oct2py==5.8.0",
    "pandas==2.3.3",
    "pillow>=10.0.0",
    "pyMapVBVD==0.6.1",
    "scipy>=1.10.0",
    "spec2nii==0.8.7",
    "nicegui>=2.0.0",
    "pywebview>=5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-xdist>=3.0.0",
    "pytest-timeout>=2.1.0",
]

[project.scripts]
# Single, stable command. The launcher starts the NiceGUI front-end in a native
# desktop window (pywebview); the same user-facing command works under uvx.
basisremy = "basisremy.__main__:main"

[tool.setuptools]
# Ship ONLY the data files explicitly listed under [tool.setuptools.package-data]
# below. With the default (true), setuptools auto-bundles every VCS-tracked file
# under the package, which would drag in all ~50 mouse-colour PNGs (~12 MB).
include-package-data = false

[tool.setuptools.packages.find]
# Package the application code under basisremy/ (now including the docker runtime
# and the vendored remy module). Only externals/ stays top-level: it is the large
# third-party Octave/MATLAB code, referenced via cwd-relative paths and fetched on
# demand rather than shipped in the wheel.
include = ["basisremy*"]

[tool.setuptools.package-data]
# Ship the GUI image assets and bundled data files that live inside the package.
basisremy = [
    # Only the four mouse colour variants the GUI actually loads (header logos +
    # watermarks). The other top-level images (logo/workflow PNGs) are only used
    # by README.md on GitHub and are never loaded at runtime, so they are left
    # out to keep the wheel small (~1 MB instead of ~20 MB).
    "assets/imgs/basisremy_mouse_all_colors/png/basisremy_mouse_navy_blue.png",
    "assets/imgs/basisremy_mouse_all_colors/png/basisremy_mouse_sky_blue.png",
    "assets/imgs/basisremy_mouse_all_colors/png/basisremy_mouse_charcoal.png",
    "assets/imgs/basisremy_mouse_all_colors/png/basisremy_mouse_light_gray.png",
    "assets/*.md",
    # First-party Octave adapter scripts (run inside Octave/Docker at runtime).
    "adapters/backends/*.m",
    "adapters/utils/*.m",
    # Vendored third-party MRSinMRS data + license (BSD-3, see remy/LICENSE).
    "remy/*.csv",
    "remy/LICENSE",
    # Docker image build context (used to build the Octave runtime on first use).
    "docker/dockerfile",
    "docker/requirements.txt",
]
